fix nav overflow

--- a/assets/style.less
+++ b/assets/style.less
@@ -61,10 +61,7 @@ p {
   color: white;
   background-color: #222;
   font-size: 18px;
-  // > *{
-  //   max-width: 1200px;
-  //   margin: 0 auto;
-  // }
+  padding: 0 15px;
 }
 
 
@@ -91,6 +88,14 @@ p {
   color: white;
   .el-menu-item, .el-submenu__title {
     color: white;
+  }
+
+  .el-submenu .el-submenu__icon-arrow {
+    margin-left: 0px;
+  }
+
+  .el-submenu .el-submenu__title {
+    padding: 0 15px;
   }
 
   .el-menu-item:not(.is-disabled):focus,
